Edge cases of SpatialIndex. Such as taxis transitioning from one partition to another.